Fixed the bug reguarding undo, wrote a redo method and created the redo button.

--- a/card-draw/card-draw.css
+++ b/card-draw/card-draw.css
@@ -1,5 +1,5 @@
 .button {
-    background-color: #3256c8;
+    background-color: #48429f;
     border: none;
     color: white;
     padding: 15px 32px;
