--- a/card-draw/card-draw.css
+++ b/card-draw/card-draw.css
@@ -15,24 +15,46 @@ body {
     display: inline-block;
     background-color: #48429f;
     border: none;
-    color: white;
+    color: #DDDDDD;
     padding: 15px 32px;
     text-align: center;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     height: 60px;
     outline: none;
+    margin: 0px 5px;
 }
 
-.button_like {
+.tool_group {
+    display: flex;
+    vertical-align: center;
+}
+
+.tool_bar {
+    display: flex;
+    vertical-align: center;
+    justify-content: space-between;
+}
+
+.options {
     display: inline-block;
     border: none;
-    color: white;
-    padding: 15px 30px;
-    text-align: center;
+    color: #DDDDDD;
+    padding: 0px;
+    text-align: left;
     font-size: 16px;
     vertical-align: center;
-    height: 25px;
+    min-height: 60px;
+    margin: 0px 15px;
+}
+
+.diff_input {
+    background: #222222;
+    border: 1px solid #48429f;
+    font-family: 'Roboto', sans-serif;
+    color: #DDDDDD;
+    width: 2em;
+    text-align: right;
 }
 
 .card_regular, .card_protected, .card_vetoed {
