--- a/card-draw/card-draw.css
+++ b/card-draw/card-draw.css
@@ -111,6 +111,18 @@ body {
     padding: 0px;
 }
 
+.no_cmod_box {
+    background: #CCCCCC;
+    color: #48429f;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 60%;
+    padding: 0px 8px;
+    margin-left: 5px;
+    border-radius: 5px;
+    vertical-align: middle;
+}
+
 .text_title, .text_subtitle {
     text-align: center;
 }
