--- a/card-draw/card-draw.css
+++ b/card-draw/card-draw.css
@@ -57,104 +57,129 @@ body {
     text-align: right;
 }
 
+#card_area {
+    display: flex;
+    font-family: 'Lato', sans-serif;
+    flex-wrap: wrap;
+}
+
+.card_bound {
+    background: #FFE658;
+    border: 4px solid #FFE658;
+    display: inline-block;
+    margin: 5px;
+    padding: 5px 5px 5px 2px;
+    box-shadow: 5px 5px 2px 2px #111111;
+    border-radius: 15px;
+}
+
 .card_regular, .card_protected, .card_vetoed {
     display: inline-block;
-    width: 418px;
-    height: 214px;
     margin: 10px;
-    padding: 12px;
-    padding-bottom: 0px;
-    box-shadow: 5px 5px 2px 2px #111111;
-    border-radius: 8px;
+    padding: 2px;
+    border-radius: 20px;
 }
 
 .card_regular {
-    background: #404040;
-    border: 4px solid #404040;
-    opacity: 1;
+    border: 7px solid #444444;
+    opacity: .8;
 }
 
 .card_protected {
-    background: #48429f;
-    border: 4px solid #AAAAFF;
+    border: 7px solid #2589dd;
     opacity: 1;
-    box-shadow: 5px 5px 2px 2px #888888;
 }
 
 .card_vetoed {
-    background: #404040;
-    border: 4px solid #404040;
+    border: 7px solid #444444;
     opacity: .2;
+}
+
+.card_body {
+    display: inline-block;
+    background: url("res/img/basic_card_small.png");
+    background-size: cover;
+    width: 354px;
+    height: 346px;
+    user-select: none;
 }
 
 .banner_image {
     background-size: cover;
-    width: 418px;
-    height: 164px;
+    width: 313.5px;
+    height: 123px;
+    margin-left: 22px;
+    margin-right: 18px;
 }
 
 .info_bar {
     display: flex;
-}
-
-.info_name {
-    float: left;
-    position: relative;
-    width: 368px;
-    height: 50px;
-    margin: 0px;
-}
-
-.info_difficulty {
-    float: left;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    margin-left: 5px;
-    color: #AAAAFF;
-    padding: 0px;
-}
-
-.no_cmod_box {
-    background: #CCCCCC;
-    color: #48429f;
-    display: inline-block;
+    color: #000000;
     font-weight: 700;
-    font-size: 60%;
-    padding: 0px 8px;
-    margin-left: 5px;
-    border-radius: 5px;
-    vertical-align: middle;
+    margin-left: 22px;
+    margin-right: 18px;
+    height: 41px;
+    align-items: end;
 }
 
-.text_title, .text_subtitle {
-    color: #CCCCCC;
-    text-align: left;
+.info_title {
+    flex-grow: 1;
+    margin-left: 40px;
 }
 
 .text_title {
-    font-weight: 700;
-    font-size: 150%;
+    font-size: 120%;
+    font-family: 'Pragati Narrow', sans-serif;
 }
 
-.text_subtitle {
-    font-weight: 400;
+.info_difficulty {
+    display: flex;
+    margin-left: 5px;
+    margin-right: 20px;
+    padding-bottom: 4px;
+    align-items: baseline;
 }
 
-.text_title_wrapper {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 368px
+.text_difficulty_marker {
+    font-size: 80%;
 }
 
 .text_difficulty {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: right;
-    width: 50px;
-    margin: 0 auto;
+    font-size: 150%;
+}
+
+.content_bar {
+    display: flex;
+    margin-left: 22px;
+    margin-right: 18px;
+    margin-top: 25px;
+    height: 130px;
+    font-weight: 700;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.text_content_title {
     font-size: 200%;
-    font-weight: bold;
+    text-align: center;
+}
+
+.text_content_subtitle {
+    font-size: 140%;
+    text-align: center;
+}
+
+.info_content_cmod {
+    display: block;
+    width: 150px;
+}
+
+.no_cmod_box {
+    background: #48429f;
+    color: #CCCCCC;
+    font-size: 120%;
+    padding: 0px 8px;
+    border-radius: 5px;
 }
