--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -130,7 +130,7 @@ body {
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5{
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
@@ -139,7 +139,8 @@ h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+h6 { font-size: 1.6rem; line-height: 1.6;  letter-spacing: 0;
+     margin-top: 1.5rem; margin-bottom: 0; font-weight: 300;}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
@@ -148,7 +149,7 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+  h6 { font-size: 1.6rem; }
 }
 
 p {
