--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -179,7 +179,7 @@ input[type="button"] {
   line-height: 38px;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  background-color: #8886;
   border-radius: 4px;
   cursor: pointer;
   box-sizing: border-box; }
